docs: updated docs with swagger
